# serprateai-explorer

./: EXAMPLES.md  README.md  app.py  pyproject.toml  requirements.txt  run.sh
data/: Dataset_BA1B.xlsx  LICENSE  README.md  ba1d_pressure.csv  ba1d_temperature.csv  bubble_count.csv  daily_precipitation.csv  earthtide_oman_waves-all_tidalarealstrain.csv  hourly_precipitation.csv  hourly_soil_temp_lvl1.csv  hourly_soil_temp_lvl2.csv  hourly_soil_temp_lvl3.csv  hourly_soil_temp_lvl4.csv  hourly_surface_pressure.csv  hourly_temp2m.csv  hourly_volu_soil_water_layer1.csv  hourly_volu_soil_water_layer2.csv  hourly_volu_soil_water_layer3.csv  hourly_volu_soil_water_layer4.csv  stationary_resonance_profile_hydro_smooth_filter_PR02549_window300s_overlap0.0_prom15db_rbw15.0_max_mean-10db.csv
data/dataset_management/: Generate_Hourly_Precip.py  Generate_Hourly_Soil_Temp_1.py  Generate_Hourly_Soil_Temp_2.py  Generate_Hourly_Soil_Temp_3.py  Generate_Hourly_Soil_Temp_4.py  Generate_Hourly_Surface_Pressure.py  Generate_Hourly_Temp2m.py  Generate_Hourly_Volu_Soil_Water_Layer1.py  Generate_Hourly_Volu_Soil_Water_Layer2.py  Generate_Hourly_Volu_Soil_Water_Layer3.py  Generate_Hourly_Volu_Soil_Water_Layer4.py
data/raw/: BA1D_p_T_2019_2020_1.csv  bubbles.csv
